cleanup code & add tests
